# home_hunter

./: .gitignore  NOTES.md  pyproject.toml  scrapy.cfg
home_hunter/scraper/: items.py  parsing.py  pipelines.py  settings.py
home_hunter/scraper/doc/: apartments-search.html  trulia-search-nextdata.json  trulia-search-pretty.html  trulia-search.html
home_hunter/scraper/spiders/: trulia.py
