[tool.poetry]
name = "home_hunter"
version = "0.1.0"
description = "Web scraping app for finding us our new home"
authors = ["Nelson Gauthier <nelson.gauthier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.0"
js2xml = "^0.4.0"
pytz = "^2021.1"
humanize = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
